<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/purple_200"
        android:gravity="center"
        android:padding="10dp"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/username_outline_logo"
            android:src="@drawable/ic_outline_person_24" />

        <EditText
            android:id="@+id/username"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/enter_your_username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/purple_200"
        android:gravity="center"
        android:padding="10dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/password_outline_logo"
            android:src="@drawable/ic_outline_lock_24" />

        <EditText
            android:id="@+id/password"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/enter_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textColor="@android:color/white" />


</LinearLayout>